--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsSizes.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsSizes.css
@@ -544,15 +544,21 @@ QWidget[bold]
 {
 font-weight: 700;
 }
+
+/*
     TabSelector
 */
-TabSelector[type="sidebar"]
+TabSelector.sidebar
 {
 border-radius:6px;
+min-height: 32px;
+max-height: 32px;
 }
 
-TabSelector[type="chip"]
+TabSelector.chip
 {
-border-radius:6px;
+border-radius:12px;
+min-height: 24px;
+max-height: 24px;
 }
 
