--- a/src/MEGASync/gui/ui/TabSelector.ui
+++ b/src/MEGASync/gui/ui/TabSelector.ui
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>0</width>
-    <height>32</height>
+    <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>16777215</width>
-    <height>32</height>
+    <height>16777215</height>
    </size>
   </property>
   <property name="cursor">
@@ -50,16 +50,16 @@
     <number>12</number>
    </property>
    <property name="topMargin">
-    <number>8</number>
+    <number>0</number>
    </property>
    <property name="rightMargin">
     <number>8</number>
    </property>
    <property name="bottomMargin">
-    <number>8</number>
+    <number>0</number>
    </property>
-   <item>
-    <widget class="QToolButton" name="lIcon">
+   <item alignment="Qt::AlignVCenter">
+    <widget class="IconLabel" name="lIcon">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
        <horstretch>0</horstretch>
@@ -105,12 +105,9 @@
      <property name="autoExclusive">
       <bool>false</bool>
      </property>
-     <property name="class" stdset="0">
-      <string notr="true">icon-label</string>
-     </property>
     </widget>
    </item>
-   <item>
+   <item alignment="Qt::AlignVCenter">
     <widget class="QLabel" name="lTitle">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -123,15 +120,27 @@
      </property>
     </widget>
    </item>
-   <item>
+   <item alignment="Qt::AlignVCenter">
     <widget class="QLabel" name="lCounter">
      <property name="text">
       <string notr="true"/>
      </property>
     </widget>
    </item>
-   <item>
-    <widget class="QToolButton" name="lClose">
+   <item alignment="Qt::AlignVCenter">
+    <widget class="IconOnlyButton" name="lClose">
+     <property name="minimumSize">
+      <size>
+       <width>16</width>
+       <height>16</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16</width>
+       <height>16</height>
+      </size>
+     </property>
      <property name="text">
       <string notr="true"/>
      </property>
@@ -139,13 +148,22 @@
       <iconset resource="../Resources_common.qrc">
        <normaloff>:/x_solid_small</normaloff>:/x_solid_small</iconset>
      </property>
-     <property name="class" stdset="0">
-      <string notr="true">icon-label</string>
-     </property>
     </widget>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>IconLabel</class>
+   <extends>QToolButton</extends>
+   <header>TokenizableItems/IconLabel.h</header>
+  </customwidget>
+  <customwidget>
+   <class>IconOnlyButton</class>
+   <extends>QPushButton</extends>
+   <header>TokenizableItems/TokenizableButtons.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="../Resources_common.qrc"/>
  </resources>
